--- a/.github/workflows/on-release-main.yml
+++ b/.github/workflows/on-release-main.yml
@@ -82,7 +82,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: wh1isper
+          username: ai-zerolab
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push image
         id: docker_build_publish
@@ -95,5 +95,5 @@ jobs:
             file: ./Dockerfile
             push: true
             tags: |
-              ghcr.io/wh1isper/mcp-openai-image-generation:${{ steps.vars.outputs.tag }}
-              ghcr.io/wh1isper/mcp-openai-image-generation:latest
+              ghcr.io/ai-zerolab/mcp-openai-image-generation:${{ steps.vars.outputs.tag }}
+              ghcr.io/ai-zerolab/mcp-openai-image-generation:latest
