--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,11 @@
 site_name: mcp-openai-image-generation
-repo_url: https://github.com/wh1isper/mcp-openai-image-generation
-site_url: https://wh1isper.github.io/mcp-openai-image-generation
+repo_url: https://github.com/ai-zerolab/mcp-openai-image-generation
+site_url: https://ai-zerolab.github.io/mcp-openai-image-generation
 site_description: OpenAI image generation MCP server
-site_author: Wh1isper
+site_author: ai-zerolab
 edit_uri: edit/main/docs/
-repo_name: wh1isper/mcp-openai-image-generation
-copyright: Maintained by <a href="https://wh1isper.com">wh1isper</a>.
+repo_name: ai-zerolab/mcp-openai-image-generation
+copyright: Maintained by <a href="https://ai-zerolab.com">ai-zerolab</a>.
 
 nav:
   - Home: index.md
@@ -41,7 +41,7 @@ theme:
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/wh1isper/mcp-openai-image-generation
+      link: https://github.com/ai-zerolab/mcp-openai-image-generation
     - icon: fontawesome/brands/python
       link: https://pypi.org/project/mcp-openai-image-generation
 
